stopgap

--- a/website/src/components/Hotspot/styles.css
+++ b/website/src/components/Hotspot/styles.css
@@ -3,8 +3,6 @@
 .module {
   align-self: stretch;
   flex: 0 1;
-  background: linear-gradient(180deg, #0E0E0E 0%, #252525 100%);
-  /*background: linear-gradient(to bottom, black 0%,black 50%,#000000 50%,white 50%,white 100%);*/
 }
 
 .grid {
@@ -13,19 +11,17 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  align-self: stretch;
   margin: 30px;
-  background: linear-gradient(to right, #7400CF 0%,#7400CF 50%, black 50%,black 100%);
 }
 
 .gridLeft {
-  background-color: #7400CF;
   align-self: stretch;
   display: flex;
   flex: 1;
   position: relative;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: flex-start;
 }
 
 .image {
@@ -33,7 +29,7 @@
 }
 
 .gridText {
-  position: relative;
+  position: absolute;
   top: 120px;
   left: 100px;
   width: 300px;
@@ -48,14 +44,15 @@
   align-self: stretch;
   display: flex;
   flex: 1;
+  background-color: #8F00FF;
 }
 
 .title {
   font-family: var(--font-replica-light);
   font-weight: 100;
-  line-height: 75px;
-  font-size: 72px;
-  letter-spacing: 1.44px;
+  line-height: 54px;
+  font-size: 54px;
+  color: #333333;
   margin: 0;
 }
 
@@ -64,18 +61,15 @@
   font-weight: 100;
   line-height: 26px;
   font-size: 18px;
-  letter-spacing: 0.36px;
+  letter-spacing: 0.9px;
+  color: #828282;
   margin: 20px 0;
 }
 
-.borderLink {
-  font-family: var(--font-replica-light);
-  line-height: 20px;
-  font-size: 15px;
-  text-align: center;
-  letter-spacing: 0.75px;
-  color: #00F9B8;
-  border: 3px solid #00F9B8;
-  padding: 5px;
-
+.rightTitle {
+  width: 100px;
+  margin: 30px 0 0 30px;
+  line-height: 30px;
+  font-size: 30px;
+  color: #FFFFFF;
 }
