--- a/website/src/components/ProductEcosystem/styles.css
+++ b/website/src/components/ProductEcosystem/styles.css
@@ -4,7 +4,6 @@
   align-self: stretch;
   flex: 0 1;
   background: linear-gradient(180deg, #0E0E0E 0%, #252525 100%);
-  /*background: linear-gradient(to bottom, black 0%,black 50%,#000000 50%,white 50%,white 100%);*/
 }
 
 .grid {
@@ -15,7 +14,6 @@
   justify-content: flex-start;
   align-self: stretch;
   margin: 30px;
-  background: linear-gradient(to right, #7400CF 0%,#7400CF 50%, black 50%,black 100%);
 }
 
 .gridLeft {
@@ -33,7 +31,7 @@
 }
 
 .gridText {
-  position: relative;
+  position: absolute;
   top: 120px;
   left: 100px;
   width: 300px;
@@ -53,8 +51,9 @@
 .title {
   font-family: var(--font-replica-light);
   font-weight: 100;
-  line-height: 75px;
-  font-size: 72px;
+  line-height: 54px;
+  font-size: 54px;
+  color: #F2F2F2;
   letter-spacing: 1.44px;
   margin: 0;
 }
@@ -62,20 +61,9 @@
 .subtitle {
   font-family: var(--font-replica-light);
   font-weight: 100;
-  line-height: 26px;
-  font-size: 18px;
-  letter-spacing: 0.36px;
+  line-height: 18px;
+  font-size: 12px;
+  letter-spacing: 0.6px;
+  color: #F2F2F2;
   margin: 20px 0;
-}
-
-.borderLink {
-  font-family: var(--font-replica-light);
-  line-height: 20px;
-  font-size: 15px;
-  text-align: center;
-  letter-spacing: 0.75px;
-  color: #00F9B8;
-  border: 3px solid #00F9B8;
-  padding: 5px;
-
 }
